countries without subregion not showing fixed

--- a/src/components/country.css
+++ b/src/components/country.css
@@ -6,6 +6,7 @@
   gap: 10px;
 
   width: calc(100% - 20px);
+  margin-top: 100px;
   background-color: rgb(230, 227, 223);
   border: 2px solid #969699;
 }
