--- a/src/components/countryList.css
+++ b/src/components/countryList.css
@@ -1,9 +1,15 @@
+.continent-main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+
+  width: calc(100% - 20px);
+  margin-top: 100px;
+}
+
 .continent-container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-
-  width: calc(100% - 20px);
 }
 
 .subcontinent-container {
@@ -37,5 +43,6 @@
 }
 
 .flag-list-img {
-  width: 100%;
+  max-height: 110px;
+  max-width: 100%;
 }
