--- a/src/components/search.css
+++ b/src/components/search.css
@@ -1,12 +1,13 @@
 .search-container {
+  position: fixed;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 4px;
 
-  width: calc(100% - 20px);
-  margin: 10px;
+  width: 100%;
+
   padding: 10px;
   background-color: rgb(230, 227, 223);
   border: 2px solid #969699;
